--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,10 @@
 name: Deploy Portfolio
 
+permissions:
+  contents: read
+  id-token: write
+  pages: write
+
 on:
   push:
     branches: ["main"]
